fix header overflowing the screen

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -120,6 +120,9 @@ $_responsive-size: 45em;
 
 .hero {
   max-height: 50vh;
+}
+
+.hero img {
   width: 100%;
   object-fit: cover;
 }
